--- a/public/style.css
+++ b/public/style.css
@@ -406,6 +406,57 @@ img.draggable {
   background: lightgrey;
 }
 
+/* control buttons for mobile devices */
+
+#mobile-buttons {
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  width: 100px;
+  height: 100px;
+	display: none;
+}
+
+#mobile-buttons > * {
+  position: absolute;
+  padding: 10px;
+  background: lightgrey;
+  opacity: 0.7;
+  border-radius: 20%;
+}
+
+
+#top, #bottom {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+#top {
+  top: 0;
+}
+
+#bottom {
+  bottom: 0;
+}
+
+#left, #right {
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#left {
+  left: 0;
+}
+
+#right {
+  right: 0;
+}
+
+#mobile-buttons > *.pressed {
+  background: #232323;
+  color: red;
+}
+
 
 
 @media screen and (max-width: 1000px) {
@@ -415,6 +466,12 @@ img.draggable {
 
 	#gamefield-container {
 		width: calc(100vw - 450px);
+	}
+}
+
+@media screen and (max-width: 920px) {
+	#mobile-buttons {
+		display: block;
 	}
 }
 
