--- a/public/style.css
+++ b/public/style.css
@@ -1,7 +1,14 @@
 
 body {
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+
 	overflow: hidden;
 }
+
+
 
 .shadow {
 	position: fixed;
