--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,5 @@
 
+
 body {
 	-webkit-user-select: none;
 	-moz-user-select: none;
@@ -6,6 +7,23 @@ body {
 	user-select: none;
 
 	overflow: hidden;
+}
+
+a {
+	color: black;
+	text-decoration: none;
+}
+
+a:visited {
+	color: black;
+}
+
+a:active {
+	color: black;
+}
+
+a:hover {
+	cursor: pointer;
 }
 
 
@@ -20,29 +38,110 @@ body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.7);
 	opacity: 0;
 
-	-webkit-transition: opacity 1s ease-in-out;
-	-moz-transition: opacity 1s ease-in-out;
-	transition: opacity 1s ease-in-out;
+	-webkit-transition: opacity 0.4s ease-in-out;
+	-moz-transition: opacity 0.4s ease-in-out;
+	transition: opacity 0.4s ease-in-out;
 }
 
 .shadow > div {
-	display: flex;
+	position: relative;
+	/*display: flex;
 	justify-content: center;
 	align-items: center;
-	min-width: 400px;
-	min-height: calc(400px * 0.8);
+	flex-direction: column;*/
+	min-width: 300px;
+	min-height: calc(300px * 0.8);
 	background: url('scroll.png') no-repeat;
 	background-size: cover;
 }
 
+.shadow > div img {
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.shadow > div p {
+	position: absolute;
+	top: 50%;
+	text-align: center;
+	transform: translateY(-50%);
+	width: 100%;
+}
+
+.shadow > div p span {
+	margin-left: 10px;
+}
+
+.shadow #shadow-buttons {
+	width: 60%;
+	position: absolute;
+	bottom: 15%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.shadow > div a {
+	display: block;
+	color: white;
+	text-decoration: none;
+	float: right;
+}
+
+.shadow > div a:first-child {
+	float: left;
+}
+
+
+
+.shadow > div a:active {
+	color: white;
+}
+
+.shadow > div a:visited {
+	color: white;
+}
+
+
+.shadow > div a {
+	padding: 10px;
+  box-sizing: border-box;
+	background: #951F1E;
+	border-radius: 10%;
+	background-size: cover;
+}
+
+.shadow > div a:hover {
+	background: white;
+	color: #951F1E;
+}
+
+.shadow #close {
+	position: absolute;
+	top: 5%;
+	right: 5%;
+}
+
 .visible {
-	opacity: 0.7;
+	opacity: 1;
 	pointer-events: all;
 }
 
+
+#gamefield-container {
+	position: relative;
+	width: calc(100vw - 600px);
+	height: calc(100vh - 56px);
+	float: left;
+	overflow: auto;
+	box-sizing: border-box;
+}
 
 #gamefield-container {
 	position: relative;
@@ -64,12 +163,46 @@ body {
 	overflow: hidden;
 }
 
+/* div which shows players health and etc */
+
+#player-state {
+	position: absolute;
+	top: 5%;
+	left: 5%;
+}
+
+#player-state .bar {
+	width: 100px;
+	height: 10px;
+	padding: 3px;
+}
+
+#player-state .bar div {
+	height: 100%;
+}
+
+.bar.health {
+	border: 3px solid red;
+}
+
+.bar.health div {
+	background: red;
+}
+
+.bar.experience {
+	border: 3px solid gold;
+}
+
+.bar.experience div {
+	background: gold;
+}
+
 
 header {
 	padding: 20px;
 	background: #232323;
 	color: white;
-	border: 1px solid white;
+	/*border: 1px solid white;*/
 }
 
 header li {
@@ -86,13 +219,14 @@ aside {
   width: 300px;
   height: calc(100vh - 56px);
   box-sizing: border-box;
-  border: 2px solid black;
+  /*border: 2px solid black;*/
 	background: #232323;
 	color: white;
 
 	-webkit-transition: width 1s ease-in-out;
 	-moz-transition: width 1s ease-in-out;
 	transition: width 1s ease-in-out;
+	overflow-y: auto;
 }
 
 aside.opened {
@@ -191,10 +325,12 @@ aside.opened {
 /*  Backpack   */
 
 #backpack {
+
 	width: 200px;
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
+	margin-top: 20px;
 }
 
 #backpack > * {
@@ -211,6 +347,7 @@ aside.opened {
 	cursor: pointer;
 }
 
+
 img.draggable {
 	width: 30px;
 	height: 30px;
@@ -226,6 +363,7 @@ img.draggable {
 	box-sizing: border-box;
 	text-align: center;
 	float: left;
+	background: #232323;
 }
 
 .log-info, .messages p {
@@ -431,20 +569,22 @@ img.draggable {
   background: lightgrey;
 }
 
+
+
 /* control buttons for mobile devices */
 
 #mobile-buttons {
   position: fixed;
   bottom: 5%;
   right: 5%;
-  width: 100px;
-  height: 100px;
+  width: 130px;
+  height: 130px;
 	display: none;
 }
 
 #mobile-buttons > * {
   position: absolute;
-  padding: 10px;
+  padding: 15px;
   background: lightgrey;
   opacity: 0.7;
   border-radius: 20%;
@@ -520,7 +660,7 @@ img.draggable {
 	}
 
 	#backpack {
-		width: 200px;
+		width: 160px;
 	}
 
 	#backpack > * {
