--- a/public/css/scss/components/_backpack.scss
+++ b/public/css/scss/components/_backpack.scss
@@ -9,9 +9,16 @@
   div {
     width: 50px;
   	height: 50px;
+		box-sizing: border-box;
   	background-image: url($backpack-cell);
   	background-size: cover;
     @include flex-center();
+
+		&.better {
+			-webkit-box-shadow: inset 0px 0px 5px 5px rgba(205,173,0,1);
+         -moz-box-shadow: inset 0px 0px 5px 5px rgba(205,173,0,1);
+              box-shadow: inset 0px 0px 5px 5px rgba(205,173,0,1);
+		}
   }
 
 }
