--- a/public/css/scss/components/_log-info.scss
+++ b/public/css/scss/components/_log-info.scss
@@ -1,4 +1,4 @@
-.log-info, .messages {
+.messages {
 	width: 300px;
 	height: calc(100vh - 56px);
 	overflow: auto;
@@ -6,6 +6,7 @@
 	text-align: center;
 	float: left;
 	background: #232323;
+	@include transition(width, 1s);
 
   p {
     padding: 10px;
@@ -21,6 +22,13 @@
     &.defeat-message {
       background: lightgrey;
     }
-    
+
   }
+
+	&.opened {
+		width: 200px;
+		overflow-y: auto;
+	}
+
+
 }
