--- a/public/css/scss/components/_player-state.scss
+++ b/public/css/scss/components/_player-state.scss
@@ -1,7 +1,29 @@
 #player-state {
-	position: absolute;
-	top: 5%;
-	left: 5%;
+	position: fixed;
+	top: calc(3% + 56px);
+	left: calc(3% + 250px);
+
+	> * {
+		margin-bottom: 5px;
+	}
+
+	.level {
+		height: 22px;
+		margin: 0;
+		width: 100%;
+		color: $exp-bar-color;
+
+		p {
+			line-height: 22px;
+			width: 100%;
+			margin: 0;
+			font-size: 20px;
+
+			.fa.fa-chevron-up {
+				margin-right: 5px;
+			}
+		}
+	}
 
   .bar {
   	width: 100px;
