--- a/public/css/scss/utils/_variables.scss
+++ b/public/css/scss/utils/_variables.scss
@@ -12,10 +12,11 @@ $player: $img-folder + 'wizard-face.png';
 $enemy: $img-folder + 'griffin-symbol.png';
 
 $scroll: $img-folder + 'scroll.png';
+// $backpack-icon: $img-folder + ''
 
 $wall: $img-folder + 'tile106.png';
 $base-wall: $img-folder + 'second-wall.jpg';
-$dung-wall: $img-folder + 'lava.png';
+$dung-wall: $img-folder + 'dungeon-wall.jpg';
 
 $room: $img-folder + 'tile123.png';
 $base-room: $img-folder + 'second-ground.png';
