--- a/public/css/scss/utils/_mixins.scss
+++ b/public/css/scss/utils/_mixins.scss
@@ -29,3 +29,9 @@
   justify-content: center;
   align-items: center;
 }
+
+@mixin inset-shadow() {
+  -webkit-box-shadow: inset 0px 0px 1px 1px rgb(255, 255, 255);
+		 -moz-box-shadow: inset 0px 0px 1px 1px rgb(255, 255, 255);
+					box-shadow: inset 0px 0px 1px 1px rgb(255, 255, 255);
+}
