--- a/public/css/scss/layout/_header.scss
+++ b/public/css/scss/layout/_header.scss
@@ -27,6 +27,7 @@ header {
 		padding: 5px;
 		background: lightgrey;
 		transform: translateY(-50%);
+		z-index: 99999;
 
 		@include transition(right, 1s);
 
